@@ -3210,7 +3210,7 @@ def SETUP_WIZARD(payload, params):
         control.setSetting('general.subtitles.keyword', 'true')
         control.setSetting('subtitles.keywords', '1')
         control.setSetting('general.dubsubtitles', 'false')
-        control.setSetting('general.source', '0')
+        control.setSetting('general.source', '1')
         control.setSetting('divflavors.showdub', 'false')
         control.setSetting('jz.dub', 'false')
         SortSelect.auto_action(0)
@@ -3222,7 +3222,7 @@ def SETUP_WIZARD(payload, params):
         control.setSetting('general.subtitles.keyword', 'true')
         control.setSetting('subtitles.keywords', '2')
         control.setSetting('general.dubsubtitles', 'false')
-        control.setSetting('general.source', '0')
+        control.setSetting('general.source', '2')
         control.setSetting('divflavors.showdub', 'true')
         control.setSetting('jz.dub', 'true')
         SortSelect.auto_action(1)
